--- a/pastaamora/assets/stylesheet/style.css
+++ b/pastaamora/assets/stylesheet/style.css
@@ -13,7 +13,11 @@
 }
 
 nav {
-  position: relative;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  align-items: center;
+  list-style: none;
 }
 
  /* Mobile First Media Queries */
